fixing links to example scripts and data

--- a/tutorial_TeX/RB_Chromosome_Evolution_Tutorial/RB_Chromosome_Evolution_Tutorial_0_content.tex
+++ b/tutorial_TeX/RB_Chromosome_Evolution_Tutorial/RB_Chromosome_Evolution_Tutorial_0_content.tex
@@ -44,6 +44,15 @@ The Chromosome Number Evolution tutorial contains several sections:
 \item Section \ref{sec:chromosse_analysis}: A simple ChromoSSE analysis
 \end{itemize}
 
+\subsection*{Example scripts and data}
+
+The data and the full scripts used for all the examples can be found on the \RevBayes website:
+
+\begin{itemize}
+\item \href{http://rawgit.com/revbayes/revbayes_tutorial/master/RB_Chromosome_Evolution_Tutorial/scripts.zip}{\cl{scripts.zip}}
+\item \href{http://rawgit.com/revbayes/revbayes_tutorial/master/RB_Chromosome_Evolution_Tutorial/data.zip}{\cl{data.zip}}
+\end{itemize}
+
 \subsection*{Recommended tutorials}
 
 This tutorial assumes the reader is familiar with the content covered in the following \RevBayes tutorials:
