--- a/tutorial_TeX/RB_Chromosome_Evolution_Tutorial/RB_Chromosome_Evolution_Tutorial_2_content.tex
+++ b/tutorial_TeX/RB_Chromosome_Evolution_Tutorial/RB_Chromosome_Evolution_Tutorial_2_content.tex
@@ -48,7 +48,7 @@ Because of this, we recommend that you type the instructions in this tutorial or
 {\begin{framed}
 On your own computer, create a directory called {\textcolor{red}{\cl{RB\_Chromosome\_Evolution\_Tutorial}}} (or any name you like). 
 
-In this directory download and unzip the archive containing the data files: \href{https://github.com/revbayes/revbayes_tutorial/tree/master/RB_Chromosome_Evolution_Tutorial/data.zip}{\cl{data.zip}}.
+In this directory download and unzip the archive containing the data files: \href{http://rawgit.com/revbayes/revbayes_tutorial/master/RB_Chromosome_Evolution_Tutorial/data.zip}{\cl{data.zip}}.
 
 This will create a folder called \cl{data} that contains the files necessary to complete this exercise.
 
@@ -68,7 +68,7 @@ When you execute \RevBayes in this exercise, you will do so within the main dire
 For complex models and analyses, it is best to create \Rev script files that will contain all of the model parameters, moves, and functions. 
 In this first section, you will create a file called \textcolor{red}{\texttt{ChromEvol\_simple.Rev}} from scratch and save it in the \cl{scripts} directory.
 
-The full scripts for these examples are also provided in the \RevBayes tutorial repository\footnote{\url{https://github.com/revbayes/revbayes_tutorial/tree/master/RB_Chromosome_Evolution_Tutorial/scripts}}. 
+The full scripts for these examples are also provided in the \RevBayes tutorial repository\footnote{\url{http://rawgit.com/revbayes/revbayes_tutorial/master/RB_Chromosome_Evolution_Tutorial/scripts.zip}}. 
 Please refer to these files to verify or troubleshoot your own scripts. 
 
 {\begin{framed}
