--- a/tutorial_TeX/RB_Chromosome_Evolution_Tutorial/RB_Chromosome_Evolution_Tutorial_3_content.tex
+++ b/tutorial_TeX/RB_Chromosome_Evolution_Tutorial/RB_Chromosome_Evolution_Tutorial_3_content.tex
@@ -8,7 +8,7 @@ Then will look at jointly estimating the phylogeny and chromsome evolution,
 show how to set up a BiChroM analysis, and demonstrate one way to add cladogenetic changes
 to a chromosome evolution analysis.
 
-Like before, scripts for these examples are also provided in the \RevBayes tutorial repository\footnote{\url{https://github.com/revbayes/revbayes_tutorial/tree/master/RB_Chromosome_Evolution_Tutorial/scripts}}. 
+Like before, scripts for these examples are also provided in the \RevBayes tutorial repository\footnote{\url{http://rawgit.com/revbayes/revbayes_tutorial/master/RB_Chromosome_Evolution_Tutorial/scripts.zip}}. 
 Please refer to these files to verify or troubleshoot your own scripts. 
 
 \bigskip
