--- a/tutorial_TeX/RB_Manual.tex
+++ b/tutorial_TeX/RB_Manual.tex
@@ -62,7 +62,7 @@ John P.~Huelsenbeck
 
 \part{Getting Started with RevBayes}
 
-\chapter{Introcution}
+\chapter{Introduction}
 \def \ResourcePath {RB_Getting_Started/}
 \include{RB_Getting_Started/RB_Getting_Started_content}
 
