--- a/tutorial_TeX/refs.bib
+++ b/tutorial_TeX/refs.bib
@@ -3377,7 +3377,7 @@ Gives also a introduction what else can be used and what is good and bad in ML, 
 }
 
 @Article{Hoehna2014b,
-  Title                    = {{Probabilistic Graphical Model Representation in Phylogenetics}},
+  Title                    = {Probabilistic Graphical Model Representation in Phylogenetics},
   Author                   = {H{\"o}hna, Sebastian and Heath, Tracy A. and Boussau, Bastien and Landis, Michael J. and Ronquist, Fredrik and Huelsenbeck, John P.},
   Journal                  = SYSBIO,
   Year                     = {2014},
@@ -4685,7 +4685,7 @@ Description of their Conitnous Change proposal and the NNI and SPR. the CC is si
 }
 
 @Book{Koller2009,
-  Title                    = {{Probabilistic Graphical Models: Principles and Techniques}},
+  Title                    = {Probabilistic Graphical Models: Principles and Techniques},
   Author                   = {Koller, D. and Friedman, N.},
   Publisher                = {The MIT Press},
   Year                     = {2009},
@@ -5474,9 +5474,9 @@ Their algorithms are available in BAMBE (Bayesian Analysis in Molecular Biology 
 }
 
 @Article{Lunn2009,
-  Title                    = {The BUGS project: Evolution, critique and future directions},
+  Title                    = {The {BUGS} Project: Evolution, Critique and Future Directions},
   Author                   = {Lunn, David and Spiegelhalter, David and Thomas, Andrew and Best, Nicky},
-  Journal                  = {Statistics in medicine},
+  Journal                  = {Statistics in Medicine},
   Year                     = {2009},
   Number                   = {25},
   Pages                    = {3049--3067},
@@ -5488,9 +5488,9 @@ Their algorithms are available in BAMBE (Bayesian Analysis in Molecular Biology 
 }
 
 @Article{Lunn2000,
-  Title                    = {WinBUGS-a Bayesian modelling framework: concepts, structure, and extensibility},
+  Title                    = {{WinBUGS} -- a {B}ayesian Modelling Framework: Concepts, Structure, and Extensibility},
   Author                   = {Lunn, David J and Thomas, Andrew and Best, Nicky and Spiegelhalter, David},
-  Journal                  = {Statistics and computing},
+  Journal                  = {Statistics and Computing},
   Year                     = {2000},
   Number                   = {4},
   Pages                    = {325--337},
